[tool.poetry]
name = "tw-observer"
version = "0.1.0"
description = ""
authors = ["nkpoid <nkpoidjp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
