[tool.poetry]
name = "twitter-ff-observer"
version = "0.1.0"
description = ""
authors = ["nkpoid <nkpoidjp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.8.0"
requests = "^2.27.1"
APScheduler = "^3.9.1"
redis = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
